--- a/VeevLibrary/build.gradle
+++ b/VeevLibrary/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    api 'io.reactivex.rxjava2:rxjava:2.1.6'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'me.drakeet.multitype:multitype:3.4.0-rc1'
 }
